--- a/formulario.html
+++ b/formulario.html
@@ -60,7 +60,7 @@
 
 <section>
  
-    <h3 class="texto"> Para finalizar, selecione os itens abixo que já domina ou se interessa</h3>
+    <h3 class="texto"> Para finalizar, selecione os itens abaixo que já domina ou se interessa</h3>
 
     <br>  <input name="item" id="item" class="check" type="checkbox" value="item1">
     <label for="item1">Python</label> <br>
