subindo primeira parte de JS

--- a/formulario.html
+++ b/formulario.html
@@ -39,20 +39,20 @@
 <section>
 <h3 class="texto">Informe sua faixa etária abaixo</h3>
 
-  <br>  <input name="idade" id="idade" class="idade" type="radio" value="idade1">
-  <label for="idade1">13-17</label> <br>
+  <br>  <input name="idade" id="idade1" class="idade" type="radio" value="1">
+  <label for="1">13-17</label> <br>
 
-  <input name="idade" id="idade" class="idade" type="radio" value="idade2">
-  <label for="idade2">18-29</label>
+  <input name="idade" id="idade2" class="idade" type="radio" value="2">
+  <label for="2">18-29</label>
 
- <br> <input  name="idade" id="idade" class="idade" type="radio" value="idade3">
-  <label for="idade3">30-49</label>
+ <br> <input  name="idade" id="idade3" class="idade" type="radio" value="3">
+  <label for="3">30-49</label>
 
-  <br> <input name="idade" id="idade" class="idade" type="radio" value="idade4">
-  <label for="idade4">50-64</label>
+  <br> <input name="idade" id="idade4" class="idade" type="radio" value="4">
+  <label for="4">50-64</label>
 
-  <br> <input name="idade" id="idade" class="idade" type="radio" value="idade5">
-  <label for="idade5">+65</label>
+  <br> <input name="idade" id="idade5" class="idade" type="radio" value="5">
+  <label for="5">+65</label>
 
 </section>
 
@@ -62,28 +62,28 @@
  
     <h3 class="texto"> Para finalizar, selecione os itens abaixo que já domina ou se interessa</h3>
 
-    <br>  <input name="item" id="item" class="check" type="checkbox" value="item1">
+    <br>  <input name="item" id="item1" class="check" type="checkbox" value="item1">
     <label for="item1">Python</label> <br>
 
-    <br>  <input name="item" id="item" class="check" type="checkbox" value="item2">
+    <br>  <input name="item" id="item2" class="check" type="checkbox" value="item2">
     <label for="item2">Java Script</label> <br>
 
-    <br>  <input name="item" id="item" class="check" type="checkbox" value="item3">
+    <br>  <input name="item" id="item3" class="check" type="checkbox" value="item3">
     <label for="item3">Java </label> <br>
 
-    <br>  <input name="item" id="item" class="check" type="checkbox" value="item4">
+    <br>  <input name="item" id="item4" class="check" type="checkbox" value="item4">
     <label for="item4">Go </label> <br>
 
-    <br>  <input name="item" id="item" class="check" type="checkbox" value="item5">
+    <br>  <input name="item" id="item5" class="check" type="checkbox" value="item5">
     <label for="item5">Swift </label> <br>
     
-    <br>  <input name="item" id="item" class="check" type="checkbox" value="item6">
+    <br>  <input name="item" id="item6" class="check" type="checkbox" value="item6">
     <label for="item6">C# </label> <br>
 
-    <br>  <input name="item" id="item" class="check" type="checkbox" value="item7">
+    <br>  <input name="item" id="item7" class="check" type="checkbox" value="item7">
     <label for="item7">C++ </label> <br>
 
-    <br>  <input name="item" id="item" class="check" type="checkbox" value="item7">
+    <br>  <input name="item" id="item8" class="check" type="checkbox" value="item7">
     <label for="item7">PHP </label> <br>
 </section>
 <br><br>
@@ -95,7 +95,7 @@
 </section>
 <hr>
 <br> <br>
-<button class="button" onclick= "Verificação()" >Continuar</button>
+<button id="button" class='button' onclick= "Verificação()" >Continuar</button>
 </div>
 
 <script src="formulario.js"></script>
