--- a/formulario.html
+++ b/formulario.html
@@ -39,19 +39,19 @@
 <section>
 <h3 class="texto">Informe sua faixa etária abaixo</h3>
 
-  <br>  <input name="idade" id="idade1" class="idade" type="radio" value="1">
+  <br>  <input name="idade" id="idade1" class="idade" type="radio" value="13-17">
   <label for="1">13-17</label> <br>
 
-  <input name="idade" id="idade2" class="idade" type="radio" value="2">
+  <input name="idade" id="idade2" class="idade" type="radio" value="18-29">
   <label for="2">18-29</label>
 
- <br> <input  name="idade" id="idade3" class="idade" type="radio" value="3">
+ <br> <input  name="idade" id="idade3" class="idade" type="radio" value="30-49">
   <label for="3">30-49</label>
 
-  <br> <input name="idade" id="idade4" class="idade" type="radio" value="4">
+  <br> <input name="idade" id="idade4" class="idade" type="radio" value="50-64">
   <label for="4">50-64</label>
 
-  <br> <input name="idade" id="idade5" class="idade" type="radio" value="5">
+  <br> <input name="idade" id="idade5" class="idade" type="radio" value="+65">
   <label for="5">+65</label>
 
 </section>
@@ -95,7 +95,7 @@
 </section>
 <hr>
 <br> <br>
-<button id="button" class='button' onclick= "Verificação()" >Continuar</button>
+<button id="button" class='button' onclick= "Enviar()" >Continuar</button>
 </div>
 
 <script src="formulario.js"></script>
