subindo alterações do dia 12/07

--- a/formulario.html
+++ b/formulario.html
@@ -62,29 +62,32 @@
  
     <h3 class="texto"> Para finalizar, selecione os itens abaixo que já domina ou se interessa</h3>
 
-    <br>  <input name="item" id="item1" class="check" type="checkbox" value="item1">
+
+    <div id="checkboxes">
+    <br>  <input name="item" id="item1" class="check" type="checkbox" value="Python">
     <label for="item1">Python</label> <br>
 
-    <br>  <input name="item" id="item2" class="check" type="checkbox" value="item2">
+    <br>  <input name="item" id="item2" class="check" type="checkbox" value="Java Script">
     <label for="item2">Java Script</label> <br>
 
-    <br>  <input name="item" id="item3" class="check" type="checkbox" value="item3">
+    <br>  <input name="item" id="item3" class="check" type="checkbox" value="Java">
     <label for="item3">Java </label> <br>
 
-    <br>  <input name="item" id="item4" class="check" type="checkbox" value="item4">
+    <br>  <input name="item" id="item4" class="check" type="checkbox" value="Go">
     <label for="item4">Go </label> <br>
 
-    <br>  <input name="item" id="item5" class="check" type="checkbox" value="item5">
+    <br>  <input name="item" id="item5" class="check" type="checkbox" value="Swift">
     <label for="item5">Swift </label> <br>
     
-    <br>  <input name="item" id="item6" class="check" type="checkbox" value="item6">
+    <br>  <input name="item" id="item6" class="check" type="checkbox" value="C#">
     <label for="item6">C# </label> <br>
 
-    <br>  <input name="item" id="item7" class="check" type="checkbox" value="item7">
+    <br>  <input name="item" id="item7" class="check" type="checkbox" value="C++">
     <label for="item7">C++ </label> <br>
 
-    <br>  <input name="item" id="item8" class="check" type="checkbox" value="item7">
+    <br>  <input name="item" id="item8" class="check" type="checkbox" value="PHP">
     <label for="item7">PHP </label> <br>
+</div>
 </section>
 <br><br>
 <hr>
